# femtopb

./: Cargo.toml  README.md
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: field.rs  lib.rs
derive/src/field/: enumeration.rs  message.rs  oneof.rs  scalar.rs  unknown_fields.rs
examples/test-build-protos/: Cargo.toml  build.rs
examples/test-build-protos/protos/google/protobuf/: unittest.proto  unittest_import.proto
examples/test-build-protos/src/: main.rs
src/: bits.rs  deferred.rs  encoding.rs  enumeration.rs  error.rs  item_encoding.rs  lib.rs  list.rs  message.rs  oneof.rs  packed.rs  repeated.rs  runtime.rs  unknown_fields.rs
src/runtime/: enumeration.rs  macros.rs  message.rs  oneof.rs  scalar.rs  unknown_fields.rs
src/runtime/scalar/: bool.rs  bytes.rs  double.rs  fixed32.rs  fixed64.rs  float.rs  int32.rs  int64.rs  sfixed32.rs  sfixed64.rs  sint32.rs  sint64.rs  string.rs  uint32.rs  uint64.rs
tests/: compound_types.proptest-regressions  compound_types.rs  scalar_types.rs
