[package]
name = "femtopb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", default-features = false }
femtopb-derive = { path = "derive" }

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"
prost = "0.12.3"

[workspace]
members = ["build", "examples/*", "derive"]
