[package]
name = "femtopb"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "A no-std, no-alloc set of tools for protobuf encoding and decoding"
repository = "https://github.com/dflemstr/femtopb"
categories = ["embedded", "encoding", "no-std", "no-std::no-alloc"]
keywords = ["protobuf", "proto"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", default-features = false }
femtopb-derive = { path = "derive", version = "0.1.0" }

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"
prost = "0.12.3"

[workspace]
members = ["build", "examples/*", "derive"]
