[package]
name = "femtopb-derive"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "Derive macros for `femtopb` traits"
repository = "https://github.com/dflemstr/femtopb"
categories = ["embedded", "encoding", "no-std", "no-std::no-alloc"]
keywords = ["protobuf", "proto"]
version = "0.4.2"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.57", features = ["derive", "extra-traits"] }
