[package]
name = "test-build-protos"
version = "0.4.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
femtopb = { version = "0.4.2", path = "../.." }
no-panic = "0.1.29"
defmt = "0.3.6"

[build-dependencies]
anyhow = "1.0.81"
femtopb-build = { version = "0.4.2", path = "../../build" }

[features]
assert-no-panic = ["femtopb/assert-no-panic"]
defmt = ["femtopb/defmt"]
