[package]
name = "test-build-protos"
version = "0.6.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
femtopb = { version = "0.6.1", path = "../.." }
no-panic = "0.1.30"
defmt = "0.3.8"

[build-dependencies]
anyhow = "1.0.86"
femtopb-build = { version = "0.6.1", path = "../../build" }

[features]
assert-no-panic = ["femtopb/assert-no-panic"]
defmt = ["femtopb/defmt"]
